--- a/photos/index.html
+++ b/photos/index.html
@@ -275,6 +275,9 @@
         appendPage(pageNumber);
 
 				var GammaSettings = {
+
+            historyapi: false,
+
 						// order is important!
 						viewport : [ {
 							width : 1200,
