adicionando foto para post facebook

--- a/photos/index.html
+++ b/photos/index.html
@@ -103,6 +103,7 @@
 
     </head>
     <body>
+      <img class="hidden" src="../images/background-image/footer-bg-dark.jpg">
       <div class="container">
         <div style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%"
              data-vide-bg="../video/carolerafa"
