--- a/photos/index.html
+++ b/photos/index.html
@@ -133,36 +133,27 @@
 
   					<div class="support-note">
   						<span class="note-ie">
-                Desculpe, parece que seu navegador é compativel.
+                Desculpe, parece que seu navegador não é compativel.
                 Tente acessar esta página com <a href="https://www.google.com.br/chrome/browser/desktop/">este</a>.
               </span>
   					</div>
 
   				</header>
 
-          <script type="text/template" id="gamma-photo">
-            <li class="wow fadeInUp">
-              <div data-alt="img03" data-max-width="1800" data-max-height="1350">
-                <div data-src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-large.jpg" data-min-width="300"></div>
-                <div data-src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-medium.jpg" data-min-width="200"></div>
-                <div data-src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-small.jpg" data-min-width="140"></div>
-                <div data-src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-xsmall.jpg"></div>
-                <noscript>
-                  <img src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-xsmall.jpg" alt="img03"/>
-                </noscript>
-              </div>
-            </li>
-          </script>
+<script type="text/template" id="gamma-photo"><li class="wow fadeInUp"><div data-alt="img03" data-max-width="1800" data-max-height="1350"><div data-src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-large.jpg" data-min-width="300"></div><div data-src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-medium.jpg" data-min-width="200"></div><div data-src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-small.jpg" data-min-width="140"></div><div data-src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-xsmall.jpg"></div><noscript><img src="<%= currentUrl %>/gallery/CaroleRafa_<%= index %>-xsmall.jpg" alt="img03"/></noscript></div></li></script>
 
   				<div class="gamma-container gamma-loading" id="gamma-container">
-
   					<ul class="gamma-gallery"></ul>
-
   					<div class="gamma-overlay"></div>
-  				</div>
+          </div>
 
+          <button class="btn btn-primary btn-lg more-photos" style="position: absolute; right:40px">
+            Carregar mais fotos
+          </button>
   			</div><!--/main-->
   		</div>
+
+      <div class="hidden temp-photos"></div>
     <!-- footer -->
     <footer>
       <div class="overlay">
@@ -257,20 +248,31 @@
         })
 
         pageNumber = 1;
-        itemsOnPage = 781;
+        itemsOnPage = 15;
         photoNumber = 781;
         lastPhotoIndex = 1;
 
         $template = $("#gamma-photo")
         $gallery = $('.gamma-gallery')
+        $tempPhotos = $('.temp-photos')
+        $morePhotos = $('.more-photos')
 
-        function appendPhoto(index) {
-          html = _.template($template.html())({
+        function appendPhoto(index, appendHtml) {
+          photoHTML = _.template($template.html())({
             index: pad(index, 3),
             currentUrl: window.location.href.replace('index.html', '')
           });
 
-          $gallery.append(html);
+          $gallery.append(photoHTML);
+        }
+
+        function appendPhotoOnGammaGallery(index) {
+          photoHTML = _.template($template.html())({
+            index: pad(index, 3),
+            currentUrl: window.location.href.replace('index.html', '')
+          });
+
+          Gamma.add($(photoHTML));
         }
 
         function appendPage(pageNumber) {
@@ -280,11 +282,38 @@
             if (lastPhotoIndex > photoNumber) {
               continue;
             }
+
             appendPhoto(lastPhotoIndex);
           }
         }
 
+        function appendPageOnGammaGallery(pageNumber) {
+          $morePhotos.attr('disabled', '');
+          interval = setInterval(function () {
+            showingPhotosNumber = (pageNumber * itemsOnPage);
+
+            if (lastPhotoIndex > showingPhotosNumber) {
+              clearInterval(interval);
+
+              existemMaisFotosASeremCarregadas = photoNumber > lastPhotoIndex;
+
+              if (existemMaisFotosASeremCarregadas) {
+                $morePhotos.removeAttr('disabled');
+              }
+              return;
+            }
+
+            lastPhotoIndex++;
+
+            appendPhotoOnGammaGallery(lastPhotoIndex);
+          }, 100);
+        }
+
         appendPage(pageNumber);
+
+        $morePhotos.click(function () {
+          appendPageOnGammaGallery(++pageNumber);
+        });
 
 				var GammaSettings = {
 
