--- a/photos/index.html
+++ b/photos/index.html
@@ -120,7 +120,13 @@
 
         <div id='better-experience-message' class="visible-xs-block text-center wow fadeInUp"
               style="position: absolute; top: 240px; left: 0px; width: 100%;">
-          <div class="label label-primary" style="font-size: 14px;">
+          <div class="label label-primary"
+               style="
+               font-size: 14px;
+               width: 100%;
+               display: block;
+               padding: 10px;
+               border-radius: 0px;">
             Veja este site em um computador. Para uma melhor experiência.
           </div>
         </div>
