--- a/photos/index.html
+++ b/photos/index.html
@@ -38,6 +38,10 @@
           text-shadow: 3px 3px 3px rgba(0, 0, 0, 1);
         }
 
+        h1.header-fixed span {
+          line-height: 24px;
+        }
+
         h1.scroll {
           position: absolute;
           top: 610px;
@@ -119,7 +123,7 @@
              src="../images/background-image/phone-bg.jpg">
 
         <div id='better-experience-message' class="visible-xs-block text-center wow fadeInUp"
-              style="position: absolute; top: 240px; left: 0px; width: 100%;">
+              style="position: absolute; top: 150px; left: 0px; width: 100%;">
           <div class="label label-primary"
                style="
                font-size: 14px;
@@ -127,7 +131,8 @@
                display: block;
                padding: 10px;
                border-radius: 0px;">
-            Veja este site em um computador. Para uma melhor experiência.
+            Veja este site em um computador. <br>
+            Para uma melhor experiência.
           </div>
         </div>
 
